customGO.css
/* ... */
div.topic ol[data-outputclass="noChapterNumbering"] li {
    counter-increment: item;
    margin-left: 0px;
}
div.topic ol[data-outputclass="noChapterNumbering"]{
	list-style: none;
    counter-reset: item;
}
.content-area-custom ul li .note ol.ol {
    list-style: decimal !important;
}

div.topic ol[data-customie="customparanumber"] > div > li {
    display: inline-flex;
    display: -ms-inline-flexbox;
    margin-left: 0px;
    width: 100%;
}

div.topic ol[data-customie="customparanumber"]{
    counter-reset: my-counter !important;
    list-style: none !important;
}
div.topic ol[data-customie="customparanumber"] > div > li::before {
    counter-increment: my-counter;
    content: counter(my-counter)"\2024";
    margin-right: 5px;
    list-style-type: none !important;
}
div.p.signaturePage{
display:none !important;
}

.glossentries-table tr, .glossentries-table td, .glossentries-table th{
border: 1px solid black;
}

/* Footnotes p tag inside, Bold/italics fix CSS after product fix */
div.topic .footnotes .fn .p, div.topic .footnotes .fn .p .b{
    display: initial;
    font-size: 12px !important;
}

/* Css to remove italics formatting on gloss-terms */
div.topic .term{
font-style: normal;
}

/* Topic Page or Publication Site CSS for Land Doctrine team to work on */

/* OVERRIDE CSS STARTS HERE */
body.no-scroll {
    overflow: hidden;
}
.table-scroll-container {
    max-width: 100%;
    max-height: 70vh;
    min-height: 500px;
    margin: 40px auto;
    overflow: scroll;
    position: relative;
    background: white;
    border: 1px solid black;
    scrollbar-width: 10px;
    scrollbar-color: #00BCD4;
}

.table-scroll-container--x-only {
    overflow-y: auto !important;
}

.table-scroll-container::-webkit-scrollbar {
    -webkit-appearance: none;
    width:10px;
    height: 10px;
}

.table-scroll-container::-webkit-scrollbar-thumb {
    border-radius: 5px;
    background-color: #00BCD4;
    color: #00BCD4;
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}
.table-scroll-container::-webkit-scrollbar-track,
.table-scroll-container::-webkit-scrollbar-corner {
    background-color: white;
    border-left: 1px solid black;
    border-top: 1px solid black;
}

.floatThead-wrapper { cursor: pointer; }

div.topic .expandable-table table:before { display: none !important; }

.table-container {
    position: relative;
}
.table-container.expandable-table .fixed-btn-container {
    position: absolute;
    z-index: 9999;
    top: 0;
    right: 0;
}
.table-container.expandable-table .fixed-btn-container .fixed-btn {
    position: absolute;
    top: 60px;
    right: 20px;
    left: auto !important;
    width: 40px;
    height: 40px;
    font-size: 25px;
    cursor: pointer;
    background: #00BCD4;
    color: white;
    z-index: 90 !important;
}
.table-container.expandable-table .fixed-btn-container .fixed-btn .material-icons {
    font-size: 40px;
}

.expandable-table .table-scroll-container {
    position: relative;
}

.expandable-table.expandable-table--open {
    position: fixed !important;
    z-index: 5000;
    top: 40px;
    left: 5%;
}

.expandable-table.expandable-table--open .table-scroll-container {
    max-width: none;
    max-height: none;
    overflow: scroll;
    position: fixed;
    z-index: 100;
    background: black;
    border: none;
    top: 0;
    left: 5%;
    height: 90%;
    width: 90%;
}

.expandable-table.expandable-table--open .table-scroll-container--x-only {
    overflow-y: auto !important;
}

.hide-temp { display: none !important; }

.expandable-table.expandable-table--open .table-scroll-container table {
    left: 0 !important;
    top: 0;
}

.expandable-table.expandable-table--open .table-scroll-container table caption {
    padding-left: 15%;
    background: transparent;
}

table > caption.title::before {
    content: attr(data-label);
}

table > caption.title > div {
    display: inline-block !important;
    max-width: 380px;
    vertical-align: top;
    text-align: left;
}
div.topic .table-container table {
    background: white;
    margin-top: 30px;
}

div.topic .table-container table caption {
    caption-side: initial;
    left: 0 !important;
    text-align: left;
    padding-left: 230px;
    z-index: 2;
    background: white;
    margin-bottom: 0 !important;
    padding-bottom: 1.25em;
}

div.topic table.table th.entry .p.rotate-text{
    padding: 0 10px;
}

